update css for activities and list to prevent overlap with other components

--- a/Frontend/mega_game_event_ui/src/App/Features/Activities/Activity.css
+++ b/Frontend/mega_game_event_ui/src/App/Features/Activities/Activity.css
@@ -1,10 +1,11 @@
-li .activity {
+li.activity {
   border: 1px solid;
   display: flex;
   flex-direction: column;
   padding: 10px;
   justify-content: flex-start;
   margin: 10px;
+  border-radius: 20px;
 }
 
 p {
