--- a/Frontend/mega_game_event_ui/src/App/Features/Activities/ActivityList.css
+++ b/Frontend/mega_game_event_ui/src/App/Features/Activities/ActivityList.css
@@ -1,4 +1,4 @@
-ul {
+.activityList ul {
   width: 500px;
   margin-left: auto;
   margin-right: auto;
